# HiveCode

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SECURITY.md
hive/: Cargo.toml  build.bat  build.sh  run_tests_capped.ps1  test_settings_ui.py
hive/.cargo/: config.toml
hive/crates/hive_agents/: Cargo.toml
hive/crates/hive_agents/examples/: ui_test_runner.rs
hive/crates/hive_agents/src/: auto_commit.rs  automation.rs  collective_memory.rs  competence_detection.rs  coordinator.rs  guardian.rs  heartbeat.rs  hiveloop.rs  hivemind.rs  integration_tools.rs  knowledge_acquisition.rs  lib.rs  mcp_client.rs  mcp_server.rs  persistence.rs  personas.rs  queen.rs  skill_authoring.rs  skill_marketplace.rs  skills.rs  specs.rs  standup.rs  swarm.rs  tool_use.rs  ui_automation.rs  voice.rs  worktree.rs
hive/crates/hive_ai/: Cargo.toml
hive/crates/hive_ai/src/: context_engine.rs  cost.rs  discovery.rs  fleet_learning.rs  lib.rs  model_registry.rs  rag.rs  semantic_search.rs  service.rs  speculative.rs  types.rs
hive/crates/hive_ai/src/providers/: anthropic.rs  anthropic_catalog.rs  gemini.rs  generic_local.rs  google_catalog.rs  groq.rs  groq_catalog.rs  huggingface.rs  huggingface_catalog.rs  litellm.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs  openai_catalog.rs  openai_sse.rs  openrouter.rs  openrouter_catalog.rs
hive/crates/hive_ai/src/routing/: auto_fallback.rs  capability_router.rs  complexity_classifier.rs  mod.rs  model_router.rs
hive/crates/hive_ai/src/tts/: elevenlabs.rs  f5.rs  mod.rs  openai_tts.rs  qwen3.rs  service.rs  telnyx.rs
hive/crates/hive_app/: Cargo.toml  build.rs
hive/crates/hive_app/src/: main.rs  tray.rs
hive/crates/hive_assistant/: Cargo.toml
hive/crates/hive_assistant/src/: approval.rs  lib.rs  plugin.rs  storage.rs
hive/crates/hive_assistant/src/calendar/: conflict_detector.rs  daily_brief.rs  mod.rs  smart_scheduler.rs
hive/crates/hive_assistant/src/email/: compose_agent.rs  inbox_agent.rs  mod.rs
hive/crates/hive_assistant/src/reminders/: mod.rs  os_notifications.rs
hive/crates/hive_blockchain/: Cargo.toml
hive/crates/hive_blockchain/src/: erc20_bytecode.rs  evm.rs  lib.rs  rpc_config.rs  solana.rs  wallet_store.rs
hive/crates/hive_core/: Cargo.toml
hive/crates/hive_core/src/: background.rs  canvas.rs  channels.rs  code_review.rs  config.rs  context.rs  conversations.rs  enterprise.rs  error_handler.rs  kanban.rs  lib.rs  logging.rs  notifications.rs  persistence.rs  scheduler.rs  secure_storage.rs  security.rs  session.rs  updater.rs
hive/crates/hive_docs/: Cargo.toml
hive/crates/hive_docs/src/: csv.rs  docx.rs  html.rs  lib.rs  markdown.rs  pdf.rs  pptx.rs  xlsx.rs
hive/crates/hive_fs/: Cargo.toml
hive/crates/hive_fs/src/: files.rs  git.rs  lib.rs  search.rs  watcher.rs
hive/crates/hive_integrations/: Cargo.toml
hive/crates/hive_integrations/src/: bitbucket.rs  browser.rs  clawdtalk.rs  docker.rs  docs_indexer.rs  github.rs  gitlab.rs  ide.rs  kubernetes.rs  lib.rs  oauth.rs  oauth_callback.rs  smart_home.rs  webhooks.rs
hive/crates/hive_integrations/src/cloud/: aws.rs  azure.rs  cloudflare.rs  gcp.rs  mod.rs  supabase.rs  vercel.rs
hive/crates/hive_integrations/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
hive/crates/hive_integrations/src/google/: calendar.rs  contacts.rs  docs.rs  drive.rs  email.rs  email_classifier.rs  mod.rs  sheets.rs  subscription_manager.rs  tasks.rs
hive/crates/hive_integrations/src/knowledge/: mod.rs  notion.rs  obsidian.rs
hive/crates/hive_integrations/src/messaging/: cross_channel.rs  discord.rs  hub.rs  matrix.rs  mod.rs  provider.rs  slack.rs  teams.rs  telegram.rs  webchat.rs
hive/crates/hive_integrations/src/microsoft/: mod.rs  outlook_calendar.rs  outlook_email.rs
hive/crates/hive_integrations/src/project_management/: asana.rs  jira.rs  linear.rs  mod.rs
hive/crates/hive_learn/: Cargo.toml
hive/crates/hive_learn/src/: lib.rs  outcome_tracker.rs  pattern_library.rs  preference_model.rs  prompt_evolver.rs  routing_learner.rs  self_evaluator.rs  storage.rs  types.rs
hive/crates/hive_network/: Cargo.toml
hive/crates/hive_network/src/: config.rs  discovery.rs  error.rs  identity.rs  lib.rs  message.rs  node.rs  peer.rs  router.rs  sync.rs  transport.rs
hive/crates/hive_shield/: Cargo.toml
hive/crates/hive_shield/src/: access_control.rs  lib.rs  pii.rs  secrets.rs  shield.rs  vulnerability.rs
hive/crates/hive_terminal/: Cargo.toml
hive/crates/hive_terminal/src/: browser.rs  cli.rs  docker.rs  executor.rs  lib.rs  shell.rs
hive/crates/hive_terminal/src/local_ai/: detection.rs  mod.rs
hive/crates/hive_ui/: Cargo.toml
hive/crates/hive_ui/src/: chat_input.rs  chat_service.rs  globals.rs  lib.rs  sidebar.rs  statusbar.rs  theme.rs  titlebar.rs  welcome.rs  workspace.rs
hive/crates/hive_ui/src/components/: code_block.rs  connectivity_badge.rs  context_attachment.rs  diff_viewer.rs  message_bubble.rs  mod.rs  model_selector.rs  split_pane.rs  thinking_indicator.rs  toast.rs  wallet_card.rs  wizard_stepper.rs
hive/crates/hive_ui/src/panels/: agents.rs  assistant.rs  chat.rs  costs.rs  files.rs  help.rs  history.rs  kanban.rs  learning.rs  logs.rs  mod.rs  monitor.rs  review.rs  routing.rs  settings.rs  shield.rs  skills.rs  specs.rs  token_launch.rs
hive/crates/hive_ui/tests/: test_chat_input.rs  test_chat_service.rs  test_files.rs  test_kanban.rs  test_logs.rs  test_monitor.rs  test_review.rs  test_routing.rs  test_settings.rs  test_sidebar.rs  test_skills.rs  test_titlebar.rs  test_token_launch.rs  test_workspace.rs
hive/crates/hive_ui_core/: Cargo.toml
hive/crates/hive_ui_core/src/: actions.rs  globals.rs  sidebar.rs  theme.rs
hive/crates/hive_ui_panels/: Cargo.toml
hive/crates/hive_ui_panels/src/components/: connectivity_badge.rs  thinking_indicator.rs  toast.rs  wallet_card.rs
hive/crates/hive_ui_panels/src/panels/: agents.rs  assistant.rs  channels.rs  chat.rs  costs.rs  (+17 more)
hive/crates/hive_ui_panels/tests/: test_channels.rs  test_chat.rs  test_costs.rs  test_history.rs  test_models_browser.rs  test_workflow_builder.rs
(+8 files in other folders)
