[workspace]
resolver = "2"
members = [
    "crates/hive_app",
    "crates/hive_ui",
    "crates/hive_ai",
    "crates/hive_core",
    "crates/hive_fs",
    "crates/hive_terminal",
    "crates/hive_docs",
    "crates/hive_integrations",
    "crates/hive_blockchain",
    "crates/hive_agents",
    "crates/hive_shield",
    "crates/hive_learn",
    "crates/hive_assistant",
]

[workspace.dependencies]
# GPUI framework
gpui = "0.2.2"
gpui-component = "0.5.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP & networking
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.34", features = ["bundled"] }

# Security
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.9"

# File system
notify = "8"
ignore = "0.4"
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Markdown
pulldown-cmark = "0.12"

# CSV
csv = "1"

# Document generation
rust_xlsxwriter = "0.80"
docx-rs = "0.4"
zip = "2"

# Async traits
async-trait = "0.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
once_cell = "1"
parking_lot = "0.12"

# Git
git2 = "0.20"

# Asset embedding
rust-embed = "8"

# Image decoding (tray icon)
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
