[package]
name = "hive_agents"
version = "0.2.0"
edition = "2024"
license = "BSL-1.1"

[dependencies]
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_fs = { path = "../hive_fs" }
hive_learn = { path = "../hive_learn" }
hive_terminal = { path = "../hive_terminal" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
sha2.workspace = true
reqwest.workspace = true
tracing.workspace = true
regex.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile = "3"
