[package]
name = "hive_agents"
version = "0.3.9"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_fs = { path = "../hive_fs" }
hive_integrations = { path = "../hive_integrations" }
hive_learn = { path = "../hive_learn" }
hive_terminal = { path = "../hive_terminal" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
sha2.workspace = true
reqwest.workspace = true
futures.workspace = true
url.workspace = true
tracing.workspace = true
regex.workspace = true
git2.workspace = true
enigo = "0.6.1"

[dev-dependencies]
tempfile = "3"
