[package]
name = "hive_app"
version = "0.3.1"
edition = "2024"
license = "MIT"

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
hive_ui = { path = "../hive_ui" }
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_fs = { path = "../hive_fs" }
hive_terminal = { path = "../hive_terminal" }
hive_agents = { path = "../hive_agents" }
hive_assistant = { path = "../hive_assistant" }
hive_blockchain = { path = "../hive_blockchain" }
hive_integrations = { path = "../hive_integrations" }
hive_learn = { path = "../hive_learn" }
hive_shield = { path = "../hive_shield" }

gpui.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tray-icon = "0.21"
rust-embed.workspace = true
image.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
