[package]
name = "hive_assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_shield = { path = "../hive_shield" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"

[dev-dependencies]
tempfile = "3"
