[package]
name = "hive_assistant"
version = "0.3.7"
edition = "2024"
license = "MIT"

[dependencies]
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_shield = { path = "../hive_shield" }
hive_integrations = { path = "../hive_integrations" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5"

[target.'cfg(not(windows))'.dependencies]
notify-rust.workspace = true

[dev-dependencies]
tempfile = "3"
