[package]
name = "hive_blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
hive_core = { path = "../hive_core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
sha2.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true

url = "2"

[dev-dependencies]
tempfile = "3"
