[package]
name = "hive_blockchain"
version = "0.2.4"
edition = "2024"
license = "MIT"

[dependencies]
hive_core = { path = "../hive_core" }

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true

url.workspace = true

[dev-dependencies]
tempfile = "3"
