[package]
name = "hive_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
whoami = "1"
hex = "0.4"
url = "2"

[dev-dependencies]
tempfile = "3"
