[package]
name = "hive_core"
version = "0.3.7"
edition = "2024"
license = "MIT"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
hive_shield = { path = "../hive_shield" }
whoami = "1"
hex = "0.4"
url.workspace = true
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
