[package]
name = "hive_docs"
version = "0.2.1"
edition = "2024"
license = "MIT"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
csv.workspace = true
rust_xlsxwriter.workspace = true
docx-rs.workspace = true
zip.workspace = true
