[package]
name = "hive_learn"
version = "0.3.5"
edition = "2024"
license = "MIT"

[dependencies]
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }

rusqlite.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
