[package]
name = "hive_shield"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sha2.workspace = true
rand.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile = "3"
