[package]
name = "hive_terminal"
version = "0.3.7"
edition = "2024"
license = "MIT"

[dependencies]
hive_core = { path = "../hive_core" }

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
dirs.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio-tungstenite.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
