[package]
name = "hive_ui"
version = "0.3.0"
edition = "2024"
license = "MIT"

[dependencies]
hive_ui_core = { path = "../hive_ui_core" }
hive_ui_panels = { path = "../hive_ui_panels" }
hive_core = { path = "../hive_core" }
hive_ai = { path = "../hive_ai" }
hive_fs = { path = "../hive_fs" }
hive_learn = { path = "../hive_learn" }
hive_shield = { path = "../hive_shield" }
hive_agents = { path = "../hive_agents" }
hive_terminal = { path = "../hive_terminal" }
hive_assistant = { path = "../hive_assistant" }
hive_blockchain = { path = "../hive_blockchain" }
hive_integrations = { path = "../hive_integrations" }

gpui.workspace = true
gpui-component.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
pulldown-cmark.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tempfile = "3"
